core/errors/src/main/java/com/example/errors/CodeMapper.kt
package com.example.errors

fun Int.toNetworkException() =
    when (this) {
        401 -> UnauthorizedException()
        in 500..599 -> ServerErrorException()
        else -> SmtWentWrongException()
    }
